Update custom-style.scss - No image rendering (fix blurry GIF on Safari)

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -96,7 +96,7 @@ body {
     }
 
     .markdown-preview-view img, .markdown-rendered img {
-        image-rendering: auto;
+        image-rendering: unset;
     }
     
 }
